[Burger:Bug] Fix bug on firefox

--- a/app/scss/animations/keyframes.scss
+++ b/app/scss/animations/keyframes.scss
@@ -28,3 +28,12 @@
     transform: scale(1);
   }
 }
+
+@keyframes menuAnimation {
+  0% {
+    right: -260px;
+  }
+  100% {
+    right: 0;
+  }
+}
